--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     container_name: pgadmin_container
     image: dpage/pgadmin4
     environment:
-      PGADMIN_DEFAULT_EMAIL: pavlovskyivan79@gmail.com  
+      PGADMIN_DEFAULT_EMAIL: xxx@yyy.zzz  
       PGADMIN_DEFAULT_PASSWORD: pgadmin11223344
       PGADMIN_CONFIG_SERVER_MODE: 'False'
     volumes:
